<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="profile"
            type="com.example.matrimony.model.Profile" />

        <variable
            name="clickListener"
            type="com.example.matrimony.utils.clicklistener.OnItemClickListener" />

        <variable
            name="position"
            type="Integer" />

        <variable
            name="yesString"
            type="String" />

        <variable
            name="noString"
            type="String" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/selectableItemBackground"
        android:foreground="?attr/selectableItemBackground"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="8dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:scaleType="centerCrop" />

                <LinearLayout
                    android:id="@+id/lly"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imageView"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="10dp"
                        android:gravity="center_vertical"
                        android:padding="10dp"
                        android:text="@string/verified"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        app:drawableStartCompat="@drawable/verified_icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="10dp"
                        android:gravity="center_vertical"
                        android:padding="10dp"
                        android:text="@string/premium_nri"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        app:drawableStartCompat="@drawable/premium" />

                </LinearLayout>

                <TextView
                    android:id="@+id/name_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/lly"
                    android:layout_gravity="bottom|start"
                    android:paddingBottom="16dp"
                    android:paddingStart="16dp"
                    android:text="@{profile.name}"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/detailsTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/name_textView"
                    android:layout_gravity="bottom|start"
                    android:paddingBottom="16dp"
                    android:paddingStart="16dp"
                    android:text="@{profile.address}"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <View
                    android:id="@+id/view"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/detailsTextView"
                    android:background="@drawable/horizontal_line"
                    android:padding="10dp" />


                <LinearLayout
                    android:id="@+id/lly_bottom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/view"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:drawablePadding="10dp"
                        android:gravity="center_vertical"
                        android:padding="10dp"
                        android:text="@string/shortlist"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        app:drawableStartCompat="@drawable/star" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:gravity="end"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:drawablePadding="10dp"
                            android:gravity="center_vertical"
                            android:padding="10dp"
                            android:text="@string/like_her"
                            android:textColor="@color/black"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:id="@+id/no_btn"
                                android:layout_width="50dp"
                                android:layout_height="30dp"
                                android:layout_margin="10dp"
                                android:background="@drawable/no_button"
                                android:gravity="center">

                                <TextView
                                    android:id="@+id/no_btn_txt"
                                    android:layout_width="wrap_content"
                                    android:layout_height="30dp"
                                    android:onClick="@{()-> clickListener.onItemClick(profile, position, noString)}"
                                    android:padding="10dp"
                                    android:text="@string/no"
                                    android:textColor="@color/black"
                                    android:textSize="10sp" />

                            </LinearLayout>

                            <LinearLayout
                                android:id="@+id/yes_btn"
                                android:layout_width="50dp"
                                android:layout_height="30dp"
                                android:layout_margin="10dp"
                                android:background="@drawable/yes_button"
                                android:gravity="center">

                                <TextView
                                    android:id="@+id/yes_btn_txt"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:onClick="@{()-> clickListener.onItemClick(profile, position, yesString)}"
                                    android:padding="10dp"
                                    android:text="@string/yes"
                                    android:textColor="@color/white"
                                    android:textSize="10sp" />

                            </LinearLayout>
                        </LinearLayout>

                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>


        </FrameLayout>
    </androidx.cardview.widget.CardView>
</layout>